Import new config file settngs.

--- a/MisterBlue/slic3r.ini
+++ b/MisterBlue/slic3r.ini
@@ -19,8 +19,8 @@ end_gcode = M104 S0 ; turn off temperature\nG28 X0 Y0  ; home XY axis\nM84     ;
 external_perimeter_speed = 70%
 external_perimeters_first = 0
 extra_perimeters = 1
-extruder_clearance_height = 30
-extruder_clearance_radius = 30
+extruder_clearance_height = 20
+extruder_clearance_radius = 20
 extruder_offset = 0x0
 extrusion_axis = E
 extrusion_multiplier = 1
@@ -31,6 +31,7 @@ filament_diameter = 3
 fill_angle = 45
 fill_density = 0.95
 fill_pattern = rectilinear
+first_layer_acceleration = 0
 first_layer_bed_temperature = 0
 first_layer_extrusion_width = 200%
 first_layer_height = 0.4
@@ -45,7 +46,7 @@ infill_acceleration = 0
 infill_every_layers = 1
 infill_extruder = 1
 infill_extrusion_width = 0
-infill_first = 0
+infill_first = 1
 infill_only_where_needed = 0
 infill_speed = 60
 layer_gcode = 
@@ -57,7 +58,9 @@ min_skirt_length = 15
 notes = 
 nozzle_diameter = 0.45
 only_retract_when_crossing_perimeters = 1
+ooze_prevention = 0
 output_filename_format = [input_filename_base].gcode
+overhangs = 1
 perimeter_acceleration = 0
 perimeter_extruder = 1
 perimeter_extrusion_width = 0
@@ -65,7 +68,7 @@ perimeter_speed = 30
 perimeters = 3
 post_process = 
 print_center = 100,100
-raft_layers = 2
+raft_layers = 0
 randomize_start = 0
 resolution = 0
 retract_before_travel = 2
@@ -85,29 +88,35 @@ slowdown_below_layer_time = 30
 small_perimeter_speed = 30
 solid_fill_pattern = rectilinear
 solid_infill_below_area = 70
-solid_infill_every_layers = 0
+solid_infill_every_layers = 1
 solid_infill_extrusion_width = 0
 solid_infill_speed = 60
 spiral_vase = 0
+standby_temperature_delta = -5
 start_gcode = G28 ; home all axes\nG1 Z5 F5000 ; lift nozzle
+start_perimeters_at_concave_points = 0
+start_perimeters_at_non_overhang = 0
 support_material = 1
-support_material_angle = 45
-support_material_enforce_layers = 1
+support_material_angle = 0
+support_material_enforce_layers = 0
 support_material_extruder = 1
 support_material_extrusion_width = 0
-support_material_interface_layers = 0
+support_material_interface_extruder = 1
+support_material_interface_layers = 3
 support_material_interface_spacing = 0
-support_material_pattern = rectilinear
+support_material_pattern = honeycomb
 support_material_spacing = 2.5
 support_material_speed = 60
 support_material_threshold = 0
 temperature = 180
+thin_walls = 1
 threads = 2
 toolchange_gcode = 
 top_infill_extrusion_width = 0
 top_solid_infill_speed = 50
 top_solid_layers = 3
 travel_speed = 130
+use_firmware_retraction = 0
 use_relative_e_distances = 0
 vibration_limit = 0
 wipe = 0
